@@ -1125,7 +1125,7 @@ proc ::board::new {w {psize 40} {showmat "nomat"} } {
     grid anchor $w center
   }
   
-  grid $w.bd -row 1 -column 1 -rowspan 8 -columnspan 8
+  grid $w.bd -row 1 -column 3 -rowspan 8 -columnspan 8
   set bd $w.bd
   
   
@@ -1145,15 +1145,15 @@ proc ::board::new {w {psize 40} {showmat "nomat"} } {
   # Set up coordinate labels:
   for {set i 1} {$i <= 8} {incr i} {
     ttk::label $w.lrank$i -text [expr {9 - $i}]
-    grid $w.lrank$i -row $i -column 0 -sticky e
+    grid $w.lrank$i -row $i -column 2 -sticky e
     ttk::label $w.rrank$i -text [expr {9 - $i}]
-    grid $w.rrank$i -row $i -column 9 -sticky w
+    grid $w.rrank$i -row $i -column 11 -sticky w
   }
   foreach i {1 2 3 4 5 6 7 8} file {a b c d e f g h} {
     ttk::label $w.tfile$file -text $file
-    grid $w.tfile$file -row 0 -column $i -sticky s
+    grid $w.tfile$file -row 0 -column [expr $i + 2] -sticky s
     ttk::label $w.bfile$file -text $file
-    grid $w.bfile$file -row 9 -column $i -sticky n
+    grid $w.bfile$file -row 9 -column [expr $i + 2] -sticky n
   }
   
   # Set up side-to-move icons:
@@ -1161,14 +1161,14 @@ proc ::board::new {w {psize 40} {showmat "nomat"} } {
   ttk::frame $w.stm
   frame $w.wtm -relief solid -borderwidth 1 -background white
   frame $w.btm -relief solid -borderwidth 1 -background black
-  grid $w.stmgap -row 1 -column 10
-  grid $w.stm -row 2 -column 11 -rowspan 5 -padx 2
+  grid $w.stmgap -row 1 -column 1
+  grid $w.stm -row 2 -column 0 -rowspan 5 -padx 2
   if {$::board::_showmat($w)} {
     canvas $w.mat -width 20 -highlightthickness 0
   }
   
-  grid $w.wtm -row 8 -column 11
-  grid $w.btm -row 1 -column 11
+  grid $w.wtm -row 8 -column 0
+  grid $w.btm -row 1 -column 0
   if {$::board::_showmat($w)} {
     grid $w.mat -row 1 -column 12 -rowspan 8 -pady 5
   }
